fix scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,10 +18,8 @@ $bg-red: #fff6f6;
   --shadow-color2: rgba(82, 239, 187, 0.4);
 }
 
-.body {
-  ::-webkit-scrollbar {
-    width: 0px;
-  }
+::-webkit-scrollbar {
+  width: 0;
 }
 
 .App {
